--- a/android/build.gradle
+++ b/android/build.gradle
@@ -16,16 +16,19 @@ allprojects {
         google()
         mavenCentral()
     }
+
+    rootProject.buildDir = '../build'
+    subprojects {
+        project.buildDir = "${rootProject.buildDir}/${project.name}"
+    }
 }
 
-rootProject.buildDir = '../build'
 subprojects {
-    project.buildDir = "${rootProject.buildDir}/${project.name}"
-}
-subprojects {
-    project.evaluationDependsOn(':app')
-}
+    project.afterEvaluate {
+        tasks.register("customClean", Delete) {
+            delete rootProject.buildDir
+        }
 
-tasks.register("clean", Delete) {
-    delete rootProject.buildDir
+        tasks.getByName("clean").dependsOn "customClean"
+    }
 }
