--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,17 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  flutter_svg: ^0.21.0
+  emoji_picker_flutter: ^1.6.3
+  shared_preferences: ^2.2.2
+  camera: ^0.10.5+7
+  path_provider: ^2.1.1
+  path: ^1.8.3
+  video_player: ^2.8.1
+  socket_io_client: ^2.0.3+1
+  permission_handler: ^11.0.1
+  intl: ^0.17.0
+
 
 dev_dependencies:
   flutter_test:
@@ -59,7 +70,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
+  assets:
+    - assets/
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
